# Neo-MPT

./: .gitignore  README.md  requirements.txt  test_symbolic_spline.py
CoordinateSystem/: curvilinear_coordinates.py  spline_curvilinear_path.py
Dynamics/: cubic_spline_path_dynamics.py  curvilinear_dynamics.py  spline_path_dynamics.py
MPC/: __init__.py  mpc_controller.py
MPC_race_cars_simplified/: CMakeLists.txt  __init__.py  acados_settings.py  acados_settings_dev.py  bicycle_model.py  bicycle_model_moving_window.py  bicycle_model_spatial.py  bicycle_model_spatial_with_body_points.py  path_tracking_mpc.py  path_tracking_mpc_spatial.py  path_tracking_mpc_spatial_with_body_points.py  plotFcn.py  time2spatial.py
MPC_race_cars_simplified/include/: acados_interface.hpp
MPC_race_cars_simplified/src/: acados_interface.cpp  spline_interface.cpp
MPC_race_cars_simplified/tracks/: __init__.py
Spline/: __init__.py  chord_length_parametric_spline_2d.py  cubic_spline.py  curvilinear_coordinates.py
Utils/: 2d_cubic_spline.py  2d_symbolic_cubic_spline.py  __init__.py  clothoid_spline.py  cubic_spline_1d.py  curvilinear_dynamics_symbolic.py  symbolic_b_spline.py  symbolic_cubic_spline.py
examples/: basic_example.py  compare_dynamics.py  race_cars_simplified.py  race_cars_simplified_spatial.py  simple_mpc_test.py  spline_only_demo.py  spline_sub.py  spline_sub_bicycle_model_spatial.py  spline_sub_bicycle_model_spatial_with_body_points.py  test_clothoid_spline.py  test_coordinate_transforms.py  test_spline_mpc.py  toy_spline_tracking.py
examples/paths/: __init__.py  path_generators.py
examples/utils/: __init__.py  waypoint_utils.py
mpc_controller/: __init__.py  curvilinear_dynamics.py  mpc_controller.py  spline_path_dynamics.py  vehicle_model.py
race_cars/: acados_settings_dev.py  bicycle_model.py  plotFcn.py
race_cars_simplified/: acados_settings_dev.py  bicycle_model.py  main.py  plotFcn.py
spline_fit/: __init__.py  chord_length_parametric_spline_2d.py  cubic_spline.py  curvilinear_coordinates.py  curvilinear_spline.py  spline_fitter.py
tests/: __init__.py  test_spline_consistency.py
